[package]
name = "htmd-cli"
version = "0.4.1"
edition = "2021"
authors = ["letmutex"]
description = "The command line tool for htmd."
license = "Apache-2.0"
repository = "https://github.com/letmutex/htmd-cli"
homepage = "https://github.com/letmutex/htmd-cli"
keywords = ["cli", "html", "markdown", "converter"]
categories = ["text-processing", "parsing", "command-line-utilities"]
readme = "README.md"

[dependencies]
clap = "4.5.43"
glob = "0.3.2"
htmd = "0.3.0"
toml = "0.9.5"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[dev-dependencies.uuid]
version = "1.17.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[[bin]]
name = "htmd"
path = "src/main.rs"
